--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -8,6 +8,13 @@
       </li>
     </ul>
     <ul>
+      <li>引擎:
+        <a style="color: #0681d0" href="https://hexo.io/zh-cn/">Hexo</a>
+        &nbsp;&nbsp;|&nbsp;&nbsp;主题:修改自
+        <a style="color: #0681d0" href="https://shen-yu.gitee.io/">Ayer</a>
+      </li>
+    </ul>
+    <ul>
       <li>
         <% if (theme.pageFooter){ %>
         <% var hexoLink = '<a href="https://hexo.io" target="_blank">Hexo</a>'; %>
