--- a/layout/categories.ejs
+++ b/layout/categories.ejs
@@ -2,7 +2,7 @@
   <% if (site.categories.length){ %>
     <h1 class="page-type-title"><%= __('categories') %></h1>
     <div class="categories-box">
-      <%- list_categories() %>
+      <%- list_categories(site.categories, {order:-1});%>
     </div>
   <% } %>
 </section>
